# Craftcord

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
craftcord/: __init__.py  client.py
craftcord/core/: config.py  dispatcher.py  events.py  exceptions.py
craftcord/discord/: adapter.py  discordpy.py
craftcord/minecraft/: client.py  events.py  models.py
craftcord/plugins/: manager.py
craftcord/transport/: base.py  http.py  websocket.py
craftcord/utils/: logging.py
docs/: api.md  index.md
examples/: basic_bot.env  basic_bot.py  http_client.py
tests/: test_client.py  test_config.py  test_dispatcher.py  test_http_transport.py  test_minecraft_client.py  test_websocket_transport.py
