[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "craftcord"
version = "0.1.0"
description = "Async Python SDK for connecting Discord bots and automation to Minecraft servers through a CraftCord plugin API."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
  { name = "CraftCord Contributors" }
]
keywords = ["minecraft", "discord", "sdk", "websocket", "automation", "asyncio"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Framework :: AsyncIO",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries",
  "Topic :: Internet"
]
dependencies = [
  "aiohttp>=3.10,<4.0",
  "websockets>=13,<14"
]

[project.optional-dependencies]
discord = [
  "discord.py>=2.4,<3.0"
]
dev = [
  "pytest>=8.3,<9.0",
  "pytest-asyncio>=0.24,<0.25",
  "coverage[toml]>=7.6,<8.0",
  "ruff>=0.6,<0.7"
]

[project.urls]
Homepage = "https://github.com/example/craftcord"
Documentation = "https://github.com/example/craftcord/tree/main/docs"
Repository = "https://github.com/example/craftcord"
Issues = "https://github.com/example/craftcord/issues"

[tool.hatch.build.targets.wheel]
packages = ["craftcord"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["craftcord"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC"]
